new file:   .vscode/settings.json 	modified:   Assets/Js/css/style.css 	modified:   Assets/Js/script.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
         <title>To Become a Coding Master!</title>
     </head>
     <body>
-        <div id="quiz"></div>
-        <button id="submit">Get Results</button>
-        <div id="results"></div>
+        <div class="container">
+            <div id="question-container" class="hide">
+                <div id="question-container">Question</div>
+                <div id="answer" class="btn-grid">
+                    <button class="btn">Answer 1</button>
+                    <button class="btn">Answer 2</button>
+                    <button class="btn">Answer 3</button>
+                    <button class="btn">Answer 4</button>
+                </div>
+            </div>
+            <div class="controls">
+                <button id="Start-btn" class="Start-btn" class>Start</button>
+                <button id="next-btn" class="next-btn btn hide">Next</button>
+            </div>
+        </div>
     </body>
 </html>
