--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <script defer src="script.js"></script>
         <title>To Become a Coding Master!</title>
     </head>
     <body>
         <div class="container">
             <div id="question-container" class="hide">
-                <div id="question-container">Question</div>
-                <div id="answer" class="btn-grid">
+                <div id="question">Question</div>
+                <div id="answer-buttons" class="btn-grid">
                     <button class="btn">Answer 1</button>
                     <button class="btn">Answer 2</button>
                     <button class="btn">Answer 3</button>
@@ -17,7 +18,7 @@
                 </div>
             </div>
             <div class="controls">
-                <button id="Start-btn" class="Start-btn" class>Start</button>
+                <button id="Start-btn" class="Start-btn">Start</button>
                 <button id="next-btn" class="next-btn btn hide">Next</button>
             </div>
         </div>
