--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <body>
         <div class="container">
             <div id="question-container" class="hide">
-                <div id="question">Question</div>
+                <div id="question">Question #1</div>
                 <div id="answer-buttons" class="btn-grid">
                     <button class="btn">Answer 1</button>
                     <button class="btn">Answer 2</button>
                     <button class="btn">Answer 3</button>
                     <button class="btn">Answer 4</button>
                 </div>
+                <div id="timer">
+                    Time: <span id="timer-value">60</span> seconds
+                </div>
+                <div id="final-score"></div>
+
+                <!-- Add the timer element here -->
             </div>
             <div class="controls">
                 <button id="Start-btn" class="Start-btn">Start</button>
