modified:   README.md 	modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     Time: <span id="timer-value">60</span> seconds
                 </div>
                 <div id="final-score"></div>
-
-                <!-- Add the timer element here -->
+                <div id="high-score"></div>
+               
             </div>
             <div class="controls">
                 <button id="Start-btn" class="Start-btn">Start</button>
